--- a/GPT_2_DEMO_FINE_TUNING.ipynb
+++ b/GPT_2_DEMO_FINE_TUNING.ipynb
@@ -37,9 +37,9 @@
         "\r\n",
         "The code is based on https://github.com/priya-dwivedi/Deep-Learning/ by Priyanka Dwivedi, with small changes by Peter S\r\n",
         "\r\n",
-        "This notebook allows to fine-tune GPT-2 Small and GPT-2 Medium and generate text from them. \r\n",
+        "This notebook allows to fine-tune GPT-2 Small, Medium and Large models and generate text from them. \r\n",
         "\r\n",
-        "First make sure that you are using a GPU: Runtime/Change runtime type/ -> Select \"GPU\". There are four types of GPUs on Colab: K80, P4, T4 and P100. If you want to fine-tune GPT-2 Medium you will need T4 or P100. For the GPT-2 Small any GPU will work. To check which GPU you have, run the command below. If the GPU is not the one you require go to \"Runtime/Factory reset runtime\" and run the command below again. Usually after a few \"resets\" you will get either T4 or P100."
+        "First make sure that you are using a GPU: Runtime/Change runtime type/ -> Select \"GPU\". There are four types of GPUs on Colab: K80, P4, T4 and P100. If you want to fine-tune GPT-2 Small or Medium any GPU will work, but to fine-tune GPT-2 Large you will need T4 or P100, which are only available on Colab Pro or Colab Pro+. To check which GPU you have, run the command below."
       ]
     },
     {
